[gd_scene load_steps=14 format=3 uid="uid://b5qhh480eming"]

[ext_resource type="Script" path="res://PracticeManager.gd" id="2_8c3rn"]
[ext_resource type="Texture2D" uid="uid://nb2h8ypvnns5" path="res://Art/Background/Menu.png" id="3_gtfny"]
[ext_resource type="Texture2D" uid="uid://djr6o4bn35m3c" path="res://Theme/GUI.png" id="4_bitid"]
[ext_resource type="Texture2D" uid="uid://dsbi1ef14wljv" path="res://Theme/Timer.png" id="4_bj8hw"]
[ext_resource type="Script" path="res://Scene/hand.gd" id="5_6baju"]
[ext_resource type="Script" path="res://Scene/stop_watch.gd" id="5_guovv"]
[ext_resource type="Theme" uid="uid://bwti3w2ekyd6x" path="res://Theme/Default.tres" id="6_r4gj6"]
[ext_resource type="Script" path="res://Scene/next_button.gd" id="7_1xvgw"]
[ext_resource type="Script" path="res://BetButton.gd" id="7_66ql2"]
[ext_resource type="FontVariation" uid="uid://c0gi7x6ivyn1o" path="res://Theme/PixelFont.tres" id="7_k7m4n"]
[ext_resource type="Shader" path="res://Shader/VHSShader.gdshader" id="8_ccspl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v6dt3"]
texture = ExtResource("4_bj8hw")
texture_margin_top = 13.6142
texture_margin_bottom = 23.4628

[sub_resource type="ShaderMaterial" id="ShaderMaterial_34l5a"]
shader = ExtResource("8_ccspl")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.094
shader_parameter/scanlines_width = 0.051
shader_parameter/grille_opacity = 0.069
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 2.037
shader_parameter/roll_variation = 0.756
shader_parameter/distort_intensity = 0.004
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00699995
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.08
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="DeckNHand" type="Node2D"]
script = ExtResource("2_8c3rn")

[node name="LevelManager" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("3_gtfny")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(466.5, 281)
scale = Vector2(14.1591, 11.3636)
texture = ExtResource("4_bitid")
region_enabled = true
region_rect = Rect2(2, 34, 44, 44)

[node name="Level1Des" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 222.0
offset_top = 102.0
offset_right = 717.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 20
text = "Sharpen your skills and see
how quickly you can select
cards to achive your highest
score."

[node name="Timer" type="Label" parent="."]
offset_left = 780.0
offset_top = 244.0
offset_right = 942.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0.869157, 0.154299, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_v6dt3")
text = "0 0 : 0 3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_guovv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NextButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 780.0
offset_top = 327.0
offset_right = 937.0
offset_bottom = 385.0
theme = ExtResource("6_r4gj6")
theme_override_font_sizes/font_size = 22
text = "NEXT"
script = ExtResource("7_1xvgw")

[node name="PlayerScore" type="Label" parent="CanvasLayer"]
offset_left = 361.0
offset_top = 107.0
offset_right = 566.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHand" type="Node2D" parent="CanvasLayer"]

[node name="PlayerHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource("5_6baju")

[node name="PlayedCards" type="Node2D" parent="CanvasLayer"]

[node name="ClickedCards" type="Node2D" parent="CanvasLayer"]
script = ExtResource("5_6baju")

[node name="Deck" type="Node2D" parent="CanvasLayer"]

[node name="Ready" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 64.0
offset_top = 451.0
offset_right = 263.0
offset_bottom = 508.0
theme = ExtResource("6_r4gj6")
theme_override_fonts/font = ExtResource("7_k7m4n")
theme_override_font_sizes/font_size = 60
text = "Ready"
script = ExtResource("7_66ql2")

[node name="Play" type="Button" parent="CanvasLayer"]
offset_left = 358.0
offset_top = 396.0
offset_right = 562.0
offset_bottom = 467.0
theme = ExtResource("6_r4gj6")
theme_override_fonts/font = ExtResource("7_k7m4n")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="MenuUI" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MenuUI"]
offset_right = 961.0
offset_bottom = 539.0
color = Color(0.384314, 0.384314, 0.384314, 0.501961)

[node name="Resume" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 439.0
offset_top = 164.0
offset_right = 553.0
offset_bottom = 203.0
theme = ExtResource("6_r4gj6")
text = "Resume"

[node name="Settings" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 434.0
offset_top = 237.0
offset_right = 555.0
offset_bottom = 281.0
theme = ExtResource("6_r4gj6")
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 431.0
offset_top = 315.0
offset_right = 555.0
offset_bottom = 354.0
theme = ExtResource("6_r4gj6")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_34l5a")
offset_right = 958.0
offset_bottom = 541.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NextButton" to="CanvasLayer/NextButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Quit" to="." method="_on_quit_pressed"]
